--- a/.github/workflows/deploy-beta.yml
+++ b/.github/workflows/deploy-beta.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Download Debug APK
         uses: actions/download-artifact@v4
         with:
-          name: app-debug
+          name: debug-apk
           path: ./artifacts
 
       - name: Debug APK
