--- a/.github/workflows/deploy-beta.yml
+++ b/.github/workflows/deploy-beta.yml
@@ -66,6 +66,7 @@ jobs:
         uses: mobile-dev-inc/action-maestro-cloud@v1.9.7
         with:
           api-key: ${{ secrets.ROBIN_API_KEY }}
+          project-id: ${{ secrets.ROBIN_PROJECT_ID }}
           app-file: ${{ env.APK_PATH }}
 
       - name: Deploy to Beta
