--- a/.github/workflows/deploy-beta.yml
+++ b/.github/workflows/deploy-beta.yml
@@ -62,12 +62,12 @@ jobs:
       - name: Debug APK Path
         run: echo "Using APK at $APK_PATH"
 
-      - name: Run UI Tests with Maestro Cloud
-        uses: mobile-dev-inc/action-maestro-cloud@v1.9.7
-        with:
-          api-key: ${{ secrets.ROBIN_API_KEY }}
-          project-id: ${{ secrets.ROBIN_PROJECT_ID }}
-          app-file: ${{ env.APK_PATH }}
+#      - name: Run UI Tests with Maestro Cloud
+#        uses: mobile-dev-inc/action-maestro-cloud@v1.9.7
+#        with:
+#          api-key: ${{ secrets.ROBIN_API_KEY }}
+#          project-id: ${{ secrets.ROBIN_PROJECT_ID }}
+#          app-file: ${{ env.APK_PATH }}
 
       - name: Install OpenSSL
         run: sudo apt-get install -y openssl
